# locust-challenge

./: .gitignore  README.md  grpc_user.py  locustfile.py  pyproject.toml  requirements.txt
credentials/: credentials.schema.json
pb/: auth_service_pb2.py  auth_service_pb2_grpc.py  rpc_create_vacancy_pb2.py  rpc_create_vacancy_pb2_grpc.py  rpc_signin_user_pb2.py  rpc_signin_user_pb2_grpc.py  rpc_signup_user_pb2.py  rpc_signup_user_pb2_grpc.py  rpc_update_vacancy_pb2.py  rpc_update_vacancy_pb2_grpc.py  user_pb2.py  user_pb2_grpc.py  user_service_pb2.py  user_service_pb2_grpc.py  vacancy_pb2.py  vacancy_pb2_grpc.py  vacancy_service_pb2.py  vacancy_service_pb2_grpc.py
tools/: generate_pb.py
